<resources>

    <string-array name="pet_types">
        <item>Cat</item>
        <item>Dog</item>
        <item>Fish</item>
    </string-array>

    <string-array name="cat_activities">
        <item>Fed</item>
        <item>Changed Litter</item>
    </string-array>

    <string-array name="dog_activities">
        <item>Fed</item>
        <item>Bathroom</item>
        <item>Walked</item>
    </string-array>

    <string-array name="fish_activities">
        <item>Fed</item>
        <item>Cleaned Bowl</item>
    </string-array>

    <string name="app_name">PetCheckAndroid</string>
    <string name="app_title">Pet Check</string>
    <string name="hint_room_code">Room Code</string>
    <string name="title_room_code">Room Code</string>
    <string name="hint_username">Username</string>
    <string name="title_username">Username</string>
    <string name="title_password">Password</string>
    <string name="hint_password">Password</string>
    <string name="btn_title_login">Login</string>
    <string name="btn_title_new_room">Create New Room</string>
    <string name="sample_text">SAMPLE TEXT</string>
    <string name="title_new_room">Create New Room</string>
    <string name="title_room_name">Room Name</string>
    <string name="hint_room_name">Room Name</string>
    <string name="title_confirm_password">Confirm Password</string>
    <string name="hint_confirm">Confirm</string>
    <string name="btn_title_continue">Continue</string>
    <string name="create_room_admin">Create Room Admin</string>
    <string name="title_first_name">First Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="title_last_name">Last Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_create">Create</string>
    <string name="empty_posts">No Activities Posted</string>
    <string name="menu_settings">settings</string>
    <string name="menu_add_pets">add pets</string>
    <string name="fab_add">add</string>
    <string name="empty_pets">No Pets Added</string>
    <string name="pet_description">Pet Description:</string>
    <string name="sample_text_large">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="special_instructions">Special Instructions:</string>
    <string name="activities_titles">Activities:</string>
    <string name="add_new_pet">Add New Pet</string>
    <string name="pet_name_title">Pet Name</string>
    <string name="hint_pet_name">Pet Name</string>
    <string name="title_pet_description">Pet Description</string>
    <string name="hint_pet_description">Pet Description</string>
    <string name="title_special_instructions">Special Instructions</string>
    <string name="hint_special_instructions">Special Instructions</string>
    <string name="title_pet_type">Pet Type:</string>
    <string name="title_new_post">New Post</string>
    <string name="title_my_pets">My Pets</string>
    <string name="title_activity_completed">Activity Completed:</string>
    <string name="title_btn_post">Post</string>
    <string name="title_menu_logout">Logout</string>
    <string name="title_menu_add_user">Add User</string>
    <string name="title_admin">Admin:</string>
    <string name="text_on">true</string>
    <string name="text_off">false</string>

</resources>