<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_corners_bottom"
        android:gravity="center">

        <TextView
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_new_room"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_room_code"
            android:layout_marginStart="7dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/new_room_tv_room_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_text"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="8dp"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_room_name"
            android:layout_marginStart="7dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/new_room_edit_room_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_room_name"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_password"
            android:layout_marginStart="7dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/new_room_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_confirm_password"
            android:layout_marginStart="7dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/new_room_edit_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/new_room_btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/btn_title_continue"
            android:textSize="18sp"
            android:layout_marginTop="8dp"/>



    </LinearLayout>

</LinearLayout>