<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mintGreen"
    android:isScrollContainer="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_corners_all_white"
        android:layout_margin="8dp"
        android:padding="4dp">

        <ImageView
            android:id="@+id/pet_details_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pet_details_tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_text"
                android:textSize="30sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/pet_details_tv_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_text"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_corners_all_white"
        android:layout_margin="8dp"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pet_description"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/pet_details_tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_text_large"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/special_instructions"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/pet_details_tv_special_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_text_large"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pet_details_linear_activities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_corners_all_white"
        android:layout_margin="8dp"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activities_titles"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black" />


    </LinearLayout>

</LinearLayout>